jobs4u.core/src/main/java/jobs4u/antlr4/LabeledExprParser.java
// Generated from C:/Users/USER/IdeaProjects/sem4pi-23-24-2dj4/jobs4u.core/src/main/resources/grammar/LabeledExpr.g4 by ANTLR 4.13.1
package jobs4u.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LabeledExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, FOOTER=14, INTERVIEW=15, REQUIREMENTS=16, 
		CREATE=17, PASSING=18, QUESTION=19, AND=20, AS=21, AWARDING=22, BEING=23, 
		BETWEEN=24, CONDUCTED=25, DIFFICULTY=26, FALSE=27, FOLLOWS=28, FOR_JOB=29, 
		FROM=30, IN=31, INTERVIEW_MODEL=32, IS_DEFINED=33, ITS_VALIDATION=34, 
		MAY_BE=35, MUST_SCORE=36, OF=37, OUTSTANDING=38, ORDER=39, RESULTS=40, 
		SHOULD_BE=41, TRUE=42, TYPE=43, WITH=44, TOPIC_TOKEN=45, COMA_TOKEN=46, 
		ENTRY_TOKEN=47, END_SATEMENT=48, String=49, Decimal=50, Real=51, ORDER_TYPE=52, 
		ORDER_METHOD=53, COMMENT=54, WS=55, TRUE_FALSE=56, SHORT_TEXT=57, SINGLE_CHOICE=58, 
		MULTIPLE_CHOICE=59, INTEGER_NUMBER=60, REAL_NUMBER=61, DATE=62, TIME=63, 
		SCALE=64, ID=65;
	public static final int
		RULE_start = 0, RULE_footer = 1, RULE_interview_conduct = 2, RULE_order = 3, 
		RULE_order_atomic = 4, RULE_score_definition = 5, RULE_outstandingClause = 6, 
		RULE_requirements = 7, RULE_requirements_body = 8, RULE_requirements_atomic = 9, 
		RULE_requirementsType = 10, RULE_arr = 11, RULE_interview = 12, RULE_interview_body = 13, 
		RULE_interview_atomic = 14, RULE_true_false = 15, RULE_short = 16, RULE_single_choice = 17, 
		RULE_multiple_choice = 18, RULE_c_choices = 19, RULE_choice = 20, RULE_int_q = 21, 
		RULE_real_q = 22, RULE_date_q = 23, RULE_time_q = 24, RULE_scale_q = 25, 
		RULE_header = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "footer", "interview_conduct", "order", "order_atomic", "score_definition", 
			"outstandingClause", "requirements", "requirements_body", "requirements_atomic", 
			"requirementsType", "arr", "interview", "interview_body", "interview_atomic", 
			"true_false", "short", "single_choice", "multiple_choice", "c_choices", 
			"choice", "int_q", "real_q", "date_q", "time_q", "scale_q", "header"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'text'", "'number'", "'multiple'", "'into'", "'['", "']'", "'yes/no'", 
			"'yes'", "'no'", "'literal'", "'regex'", "'('", "')'", "'footer'", "'interview'", 
			"'requirements'", "'create'", "'passing'", "'question'", "'and'", "'as'", 
			"'awarding'", "'being'", "'between'", "'conducted'", "'difficulty'", 
			"'false'", "'follows'", "'for job opening'", "'from'", "'in'", "'interview model'", 
			"'is defined'", "'its validation'", "'may be'", "'must score'", "'of'", 
			"'outstanding'", "'order'", "'results'", "'should be'", "'true'", "'type'", 
			"'with'", "'-'", "','", "'->'", "';'", null, null, null, null, null, 
			null, null, "'true/false'", "'short text'", "'single choice'", "'multiple choice'", 
			"'integer number'", "'real number'", "'date'", "'time'", "'scale'", "'id'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "FOOTER", "INTERVIEW", "REQUIREMENTS", "CREATE", "PASSING", 
			"QUESTION", "AND", "AS", "AWARDING", "BEING", "BETWEEN", "CONDUCTED", 
			"DIFFICULTY", "FALSE", "FOLLOWS", "FOR_JOB", "FROM", "IN", "INTERVIEW_MODEL", 
			"IS_DEFINED", "ITS_VALIDATION", "MAY_BE", "MUST_SCORE", "OF", "OUTSTANDING", 
			"ORDER", "RESULTS", "SHOULD_BE", "TRUE", "TYPE", "WITH", "TOPIC_TOKEN", 
			"COMA_TOKEN", "ENTRY_TOKEN", "END_SATEMENT", "String", "Decimal", "Real", 
			"ORDER_TYPE", "ORDER_METHOD", "COMMENT", "WS", "TRUE_FALSE", "SHORT_TEXT", 
			"SINGLE_CHOICE", "MULTIPLE_CHOICE", "INTEGER_NUMBER", "REAL_NUMBER", 
			"DATE", "TIME", "SCALE", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LabeledExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LabeledExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public InterviewContext interview() {
			return getRuleContext(InterviewContext.class,0);
		}
		public FooterContext footer() {
			return getRuleContext(FooterContext.class,0);
		}
		public RequirementsContext requirements() {
			return getRuleContext(RequirementsContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			header();
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(55);
				requirements();
				}
				break;
			}
			setState(58);
			interview();
			setState(59);
			footer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FooterContext extends ParserRuleContext {
		public TerminalNode TOPIC_TOKEN() { return getToken(LabeledExprParser.TOPIC_TOKEN, 0); }
		public TerminalNode FOOTER() { return getToken(LabeledExprParser.FOOTER, 0); }
		public Score_definitionContext score_definition() {
			return getRuleContext(Score_definitionContext.class,0);
		}
		public List<TerminalNode> END_SATEMENT() { return getTokens(LabeledExprParser.END_SATEMENT); }
		public TerminalNode END_SATEMENT(int i) {
			return getToken(LabeledExprParser.END_SATEMENT, i);
		}
		public Interview_conductContext interview_conduct() {
			return getRuleContext(Interview_conductContext.class,0);
		}
		public FooterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_footer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterFooter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitFooter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitFooter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FooterContext footer() throws RecognitionException {
		FooterContext _localctx = new FooterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_footer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(TOPIC_TOKEN);
			setState(62);
			match(FOOTER);
			setState(63);
			score_definition();
			setState(64);
			match(END_SATEMENT);
			setState(65);
			interview_conduct();
			setState(66);
			match(END_SATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Interview_conductContext extends ParserRuleContext {
		public TerminalNode INTERVIEW() { return getToken(LabeledExprParser.INTERVIEW, 0); }
		public TerminalNode SHOULD_BE() { return getToken(LabeledExprParser.SHOULD_BE, 0); }
		public TerminalNode CONDUCTED() { return getToken(LabeledExprParser.CONDUCTED, 0); }
		public TerminalNode IN() { return getToken(LabeledExprParser.IN, 0); }
		public OrderContext order() {
			return getRuleContext(OrderContext.class,0);
		}
		public TerminalNode ORDER() { return getToken(LabeledExprParser.ORDER, 0); }
		public Interview_conductContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interview_conduct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterInterview_conduct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitInterview_conduct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitInterview_conduct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interview_conductContext interview_conduct() throws RecognitionException {
		Interview_conductContext _localctx = new Interview_conductContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_interview_conduct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(INTERVIEW);
			setState(69);
			match(SHOULD_BE);
			setState(70);
			match(CONDUCTED);
			setState(71);
			match(IN);
			setState(72);
			order();
			setState(73);
			match(ORDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrderContext extends ParserRuleContext {
		public Order_atomicContext order_atomic() {
			return getRuleContext(Order_atomicContext.class,0);
		}
		public TerminalNode COMA_TOKEN() { return getToken(LabeledExprParser.COMA_TOKEN, 0); }
		public OrderContext order() {
			return getRuleContext(OrderContext.class,0);
		}
		public OrderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterOrder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitOrder(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitOrder(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrderContext order() throws RecognitionException {
		OrderContext _localctx = new OrderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_order);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				order_atomic();
				setState(76);
				match(COMA_TOKEN);
				setState(77);
				order();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				order_atomic();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Order_atomicContext extends ParserRuleContext {
		public TerminalNode ORDER_TYPE() { return getToken(LabeledExprParser.ORDER_TYPE, 0); }
		public TerminalNode ORDER_METHOD() { return getToken(LabeledExprParser.ORDER_METHOD, 0); }
		public Order_atomicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order_atomic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterOrder_atomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitOrder_atomic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitOrder_atomic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Order_atomicContext order_atomic() throws RecognitionException {
		Order_atomicContext _localctx = new Order_atomicContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_order_atomic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(ORDER_TYPE);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER_METHOD) {
				{
				setState(83);
				match(ORDER_METHOD);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Score_definitionContext extends ParserRuleContext {
		public Token passingScore;
		public TerminalNode PASSING() { return getToken(LabeledExprParser.PASSING, 0); }
		public TerminalNode RESULTS() { return getToken(LabeledExprParser.RESULTS, 0); }
		public TerminalNode MUST_SCORE() { return getToken(LabeledExprParser.MUST_SCORE, 0); }
		public TerminalNode Decimal() { return getToken(LabeledExprParser.Decimal, 0); }
		public OutstandingClauseContext outstandingClause() {
			return getRuleContext(OutstandingClauseContext.class,0);
		}
		public Score_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterScore_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitScore_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitScore_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Score_definitionContext score_definition() throws RecognitionException {
		Score_definitionContext _localctx = new Score_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_score_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(PASSING);
			setState(87);
			match(RESULTS);
			setState(88);
			match(MUST_SCORE);
			setState(89);
			((Score_definitionContext)_localctx).passingScore = match(Decimal);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMA_TOKEN) {
				{
				setState(90);
				outstandingClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutstandingClauseContext extends ParserRuleContext {
		public Token outstandingResults;
		public TerminalNode COMA_TOKEN() { return getToken(LabeledExprParser.COMA_TOKEN, 0); }
		public TerminalNode OUTSTANDING() { return getToken(LabeledExprParser.OUTSTANDING, 0); }
		public TerminalNode RESULTS() { return getToken(LabeledExprParser.RESULTS, 0); }
		public TerminalNode MUST_SCORE() { return getToken(LabeledExprParser.MUST_SCORE, 0); }
		public TerminalNode Decimal() { return getToken(LabeledExprParser.Decimal, 0); }
		public OutstandingClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outstandingClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterOutstandingClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitOutstandingClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitOutstandingClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutstandingClauseContext outstandingClause() throws RecognitionException {
		OutstandingClauseContext _localctx = new OutstandingClauseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_outstandingClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(COMA_TOKEN);
			setState(94);
			match(OUTSTANDING);
			setState(95);
			match(RESULTS);
			setState(96);
			match(MUST_SCORE);
			setState(97);
			((OutstandingClauseContext)_localctx).outstandingResults = match(Decimal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementsContext extends ParserRuleContext {
		public TerminalNode TOPIC_TOKEN() { return getToken(LabeledExprParser.TOPIC_TOKEN, 0); }
		public TerminalNode REQUIREMENTS() { return getToken(LabeledExprParser.REQUIREMENTS, 0); }
		public Requirements_bodyContext requirements_body() {
			return getRuleContext(Requirements_bodyContext.class,0);
		}
		public RequirementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterRequirements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitRequirements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitRequirements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementsContext requirements() throws RecognitionException {
		RequirementsContext _localctx = new RequirementsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_requirements);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(TOPIC_TOKEN);
			setState(100);
			match(REQUIREMENTS);
			setState(101);
			requirements_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Requirements_bodyContext extends ParserRuleContext {
		public Requirements_atomicContext requirements_atomic() {
			return getRuleContext(Requirements_atomicContext.class,0);
		}
		public Requirements_bodyContext requirements_body() {
			return getRuleContext(Requirements_bodyContext.class,0);
		}
		public Requirements_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirements_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterRequirements_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitRequirements_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitRequirements_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Requirements_bodyContext requirements_body() throws RecognitionException {
		Requirements_bodyContext _localctx = new Requirements_bodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_requirements_body);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				requirements_atomic();
				setState(104);
				requirements_body();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				requirements_atomic();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Requirements_atomicContext extends ParserRuleContext {
		public Token requirementName;
		public TerminalNode ENTRY_TOKEN() { return getToken(LabeledExprParser.ENTRY_TOKEN, 0); }
		public TerminalNode AS() { return getToken(LabeledExprParser.AS, 0); }
		public RequirementsTypeContext requirementsType() {
			return getRuleContext(RequirementsTypeContext.class,0);
		}
		public TerminalNode END_SATEMENT() { return getToken(LabeledExprParser.END_SATEMENT, 0); }
		public TerminalNode String() { return getToken(LabeledExprParser.String, 0); }
		public Requirements_atomicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirements_atomic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterRequirements_atomic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitRequirements_atomic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitRequirements_atomic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Requirements_atomicContext requirements_atomic() throws RecognitionException {
		Requirements_atomicContext _localctx = new Requirements_atomicContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_requirements_atomic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ENTRY_TOKEN);
			setState(110);
			((Requirements_atomicContext)_localctx).requirementName = match(String);
			setState(111);
			match(AS);
			setState(112);
			requirementsType();
			setState(113);
			match(END_SATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
